After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771976 - map plugin: Initial zoom level wrong
map plugin: Initial zoom level wrong
Status: RESOLVED FIXED
Product: eog-plugins
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Thomas Bechtold
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-26 06:36 UTC by Thomas Bechtold
Modified: 2019-02-22 03:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Set useful initial zoom level (1.10 KB, patch)
2016-09-26 06:39 UTC, Thomas Bechtold
none Details | Review

Description Thomas Bechtold 2016-09-26 06:36:27 UTC
When opening the map plugin, the initial zoom level is wrong. The map shows a lot of the world while the picture (or multiple pictures) are usually from a given area. I.e. if you have a folder with picture from France, it would be nice to scale to France (or the area where the pictures are taken).
Comment 1 Thomas Bechtold 2016-09-26 06:39:00 UTC
Created attachment 336247 [details] [review]
Set useful initial zoom level
Comment 2 Felix Riemann 2016-10-01 13:33:41 UTC
Thanks, it's a bit unfortunate that it zooms into the middle of the atlantic when you open the map without images having GPS data. I'll see if I can find a solution for that. Otherwise this is good.

commit ec0dd943a03327b410f0ab29f2363facb6b2e800
Author: Thomas Bechtold <>
Date:   Mon Sep 26 08:36:47 2016 +0200

    map: Use meaningful initial zoom level
    
    Just be sure that all given markers are visible on the initial zoom level
    but on the other hand, don't show the whole world.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=771976
Comment 3 Felix Riemann 2016-10-02 16:55:08 UTC
commit 5262edbdf544e95c8d14d2e411791176432748d5
Author: Felix Riemann <>
Date:   Sun Oct 2 18:51:39 2016 +0200

    map: Only set initial zoom if markers are actually present
    
    Otherwise it would just zoom somewhere in the Atlantic.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=771976