map: Use meaningful initial zoom level

Just be sure that all given markers are visible on the initial zoom level
but on the other hand, don't show the whole world.

https://bugzilla.gnome.org/show_bug.cgi?id=771976